--- a/styles/main.css
+++ b/styles/main.css
@@ -1,16 +1,20 @@
 * {
-    border: solid red 1px;
+    /*border: solid red 1px;*/
 }
 
 
 html {
     font-family: 'Comfortaa', cursive;
     font-family: 'Heebo', sans-serif;
+    background-color: #312509;
 }
+
+
 
 .header {
     display: flex;
     justify-content: center;
+    background-color: #a3bbad;
 }
 
 .header-logo {
@@ -23,6 +27,9 @@ html {
 
 .destination-section {
     text-align: center;
+    width: 68%;
+    margin: 0 1%;
+    background-color: #a3bbad;
 }
 
 .destination-card-container {
@@ -35,10 +42,23 @@ html {
     width: 30%;
 }
 
+.service-bar-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+.service-bar-service-type {
+    width: 17%;
+    margin: 0 1%;
+}
+
 .service-list-div {
     text-align: left;
 }
 
 .guests-section {
-    width: 30%;
+    width: 28%;
+    margin: 0 1%;
+    background-color: #a3bbad;
 }
