--- a/styles/main.css
+++ b/styles/main.css
@@ -15,6 +15,8 @@ html {
     display: flex;
     justify-content: center;
     background-color: #a3bbad;
+    margin: 1%;
+    align-items: center;
 }
 
 .header-logo {
@@ -40,12 +42,33 @@ html {
 
 .destination-card {
     width: 30%;
+    border: 1px solid black;
+    margin-bottom: 2%;
+    
+}
+
+.destination-card-text-div {
+    padding: 10%;
+}
+
+.destination-card-image {
+    width: 100%;
+    height: 40%;
+    object-fit: cover;
 }
 
 .service-bar-container {
+    background: lightgray;
+    padding: 1%;
+    margin: 2%;
+}
+
+.service-bar-list-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    
+    
 }
 
 .service-bar-service-type {
@@ -61,4 +84,17 @@ html {
     width: 28%;
     margin: 0 1%;
     background-color: #a3bbad;
+    text-align: center;
+}
+
+.guest-list-container {
+    text-align: left;
+}
+
+.footer {
+    display: flex;
+    background-color: #a3bbad;
+    margin: 1%;
+    justify-content: space-evenly;
+    align-items: center;
 }
